# WebPageAnalyzer

./: .gitignore  .replit  chat_request.py  main.py  pyproject.toml  web_scraper.py
static/css/: style.css
static/js/: script.js
templates/: index.html
