[tool.poetry]
name = "repl-nix-webpageanalyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
trafilatura = "^1.12.2"
openai = "^1.47.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
newspaper3k = "^0.2.8"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
